# Web_application_to_convert_numeric_currency_to_text

./: Cargo.toml  README.md  english.rs  gujrati.rs  hindi.rs  main.rs
src/: bengali.rs  main.rs  marathi.rs
static/: index
templates/: index.html  index.html.tera
