[package]
name = "my_web_app"
version = "0.0.0"
edition = "2018"
publish = false

[dependencies]
rocket = "0.4.5"
htmlescape = "0.3.1"
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"
r2d2-diesel = "1.0"
r2d2 = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
reqwest="0.8.3"
[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json","serve","tera_templates"]