[package]
name = "my_web_app"
version = "0.0.0"
edition = "2018"
publish = false

[dependencies]
rocket = "0.4.5"
htmlescape = "0.3.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json","serve","tera_templates"]